--- a/README.Rmd
+++ b/README.Rmd
@@ -3,10 +3,11 @@ title: "practica_que_jaléxd"
 author: "Vanessa"
 date: "24/6/2021"
 output: github_document
+
 ---
 
 ```{r}
-#Vanessa nina 14160173
+#Vanessa Nina 14160173
 #1)
 a<-10000%%3
 a #es lo que sobra al repartir 10000$ entre 3 personas
@@ -29,7 +30,7 @@ S <- (1:100)
 sum(1:100)
 sum_s<- (100*101)/2
 sum_s
-## la suma es 5050, usando sumatoria y la formula
+## la suma es 5050, usando sumatoria y la fórmula
 
 #6)
 e<-c(1, -4, 5, 9, -4)
@@ -75,7 +76,7 @@ n
 ninvert<- c(15:5)
 ninvert
 n<- c(5:15)
-rev(n)#resulta lo mismo que al invertirlo usar la funciÃ³n rev
+rev(n)#resulta lo mismo que al invertirlo usar la función rev
 
 #12)
 w<- 10:100
@@ -86,7 +87,17 @@ sum(2^z/z +3^z/z^2)
 
 #14)
 df<-read.csv("https://raw.githubusercontent.com/fhernanb/datos/master/Paises.txt",sep="",dec=".")
-#primero 
+View(df)
+plot(df)
+alta<-subset(df, alfabetizacion >=70)
+plot(alta)
+x<- alta$Pais
+y<- alta$alfabetizacion
+
+hist(df$alfabetizacion, freq = T, col = "skyblue", labels = T)
+
+
+#primer 
 length(df)
 #segundo
 length(df[,1])
