--- a/README.Rmd
+++ b/README.Rmd
@@ -120,6 +120,20 @@ df[df$mpg<18.0,]
 df[df$cyl==4,]
 
 df[df$wt>2.500&df$am==1,]
+
+
+#16
+x<-0:365
+y<-pi*2*(x-81)/365
+funcion<-9.87*sin(2*y)-7.35*cos(y)-1.5*sin(y)
+n<-month.abb
+n<-x/33.27
+m<-month.abb
+
+
+plot(n, funcion, xaxt = "n")
+axis(1, at = seq(round(min(n)), round(max(n)), by = 1), labels =m)
+
 ```
 
 <img src="https://media.giphy.com/media/vFKqnCdLPNOKc/giphy.gif" width="100" height="100" />
