--- a/README.Rmd
+++ b/README.Rmd
@@ -1,27 +1,38 @@
 ---
-title: "practica_que_jaléxd"
+title: "práctica_que_jaléxd"
 author: "Vanessa"
 date: "24/6/2021"
 output: github_document
 
 ---
+<span style="color:green"> **Primera Práctica calificada**
+</span>
 
-*Primera Práctica calificada* 
+<span style="color:orange"> *Vanessa Nina 14160173*
+</span>
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/UNMSM_coatofarms_seal.svg" width="80" height="80">
 
 
 ```{r}
-#Vanessa Nina 14160173
+
 #1)
 a<-10000%%3
 a #es lo que sobra al repartir 10000$ entre 3 personas
+```
+
+```{r}
 #2)
 4560%%3 #si es divisible por 3 porque su residuo es cero
+```
+
+```{r}
 #3)
 b<- c(2:87)
 b[b%%7==0]
+```
 
+```{r}
 #4)
 
 c<- c(7:3)
@@ -29,14 +40,18 @@ d<-c(seq(from=5, to=25, by=5))
 condiA <- ifelse(c%%2==0, "TRUE", "FALSE")
 condiB <- ifelse(d>10, "TRUE", "FALSE")
 data.frame(condiA,condiB)#en la cuarta posicion se cumplen ambas condiciones
+```
 
+```{r}
 #5)
 S <- (1:100)
 sum(1:100)
 sum_s<- (100*101)/2
 sum_s
 ## la suma es 5050, usando sumatoria y la fórmula
+```
 
+```{r}
 #6)
 e<-c(1, -4, 5, 9, -4)
 min(e)
@@ -44,16 +59,26 @@ nivel<-c(1, -4, 5, 9,-4)
 nivel[2]
 nivel[5]
 ifelse(e==min(e), "ValorMinimo", "***")
+```
 
+```{r}
 #7)
 factorial(8)
+```
 
+```{r}
 #8)
 x<- 3:7
 sum(exp(x))
+```
+
+```{r}
 #9)
 y<-1:10
 prod(log(sqrt(y)))
+```
+
+```{r}
 #10)
 
 R=25
@@ -73,7 +98,9 @@ area2 <-ar2(d,R)
 area2
 ar_final <- area1 - area2
 ar_final
+```
 
+```{r}
 #11)
 
 n<- c(5:15)
@@ -82,10 +109,15 @@ ninvert<- c(15:5)
 ninvert
 n<- c(5:15)
 rev(n)#resulta lo mismo que al invertirlo usar la función rev
+```
 
+```{r}
 #12)
 w<- 10:100
 sum(w^3+ 4*w^2)
+```
+
+```{r}
 #13)
 z<- 1:25
 sum(2^z/z +3^z/z^2)
@@ -113,6 +145,9 @@ length(df[,1])
 df[df$poblacion==max(df[,2]),]
 #cuarto
 df[df$alfabetizacion==min(df[,3]),]
+```
+
+```{r}
 #15
 df<-mtcars
 df[df$mpg<18.0,]
@@ -120,8 +155,9 @@ df[df$mpg<18.0,]
 df[df$cyl==4,]
 
 df[df$wt>2.500&df$am==1,]
+```
 
-
+```{r}
 #16
 x<-0:365
 y<-pi*2*(x-81)/365
@@ -136,8 +172,11 @@ axis(1, at = seq(round(min(n)), round(max(n)), by = 1), labels =m)
 
 ```
 
+
+
 <img src="https://media.giphy.com/media/vFKqnCdLPNOKc/giphy.gif" width="100" height="100" />
 
-**fin**
+<span style="color:Cyan"> **Gracias**
+</span>
 
 
